@@ -71,6 +71,26 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|net
+operator|.
+name|URL
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
+name|URLClassLoader
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -561,6 +581,32 @@ argument_list|,
 name|realFiles
 argument_list|)
 expr_stmt|;
+comment|// workaround for hadoop-17 - jobclient only looks at commandlineconfig
+name|Configuration
+name|commandConf
+init|=
+name|JobClient
+operator|.
+name|getCommandLineConfig
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|commandConf
+operator|!=
+literal|null
+condition|)
+block|{
+name|commandConf
+operator|.
+name|set
+argument_list|(
+literal|"tmpfiles"
+argument_list|,
+name|realFiles
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 comment|/**    * Constructor/Initialization for invocation as independent utility    */
@@ -576,6 +622,8 @@ parameter_list|,
 name|boolean
 name|isSilent
 parameter_list|)
+throws|throws
+name|HiveException
 block|{
 name|setWork
 argument_list|(
@@ -1252,6 +1300,136 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+block|}
+comment|/**    * Add new elements to the classpath    * @param newPaths Array of classpath elements    */
+specifier|private
+specifier|static
+name|void
+name|addToClassPath
+parameter_list|(
+name|String
+index|[]
+name|newPaths
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+name|Thread
+name|curThread
+init|=
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+decl_stmt|;
+name|URLClassLoader
+name|loader
+init|=
+operator|(
+name|URLClassLoader
+operator|)
+name|curThread
+operator|.
+name|getContextClassLoader
+argument_list|()
+decl_stmt|;
+name|List
+argument_list|<
+name|URL
+argument_list|>
+name|curPath
+init|=
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|loader
+operator|.
+name|getURLs
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|ArrayList
+argument_list|<
+name|URL
+argument_list|>
+name|newPath
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|URL
+argument_list|>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|String
+name|onestr
+range|:
+name|newPaths
+control|)
+block|{
+name|URL
+name|oneurl
+init|=
+operator|(
+operator|new
+name|File
+argument_list|(
+name|onestr
+argument_list|)
+operator|)
+operator|.
+name|toURL
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|curPath
+operator|.
+name|contains
+argument_list|(
+name|oneurl
+argument_list|)
+condition|)
+block|{
+name|newPath
+operator|.
+name|add
+argument_list|(
+name|oneurl
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|loader
+operator|=
+operator|new
+name|URLClassLoader
+argument_list|(
+name|newPath
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|URL
+index|[
+literal|0
+index|]
+argument_list|)
+argument_list|,
+name|loader
+argument_list|)
+expr_stmt|;
+name|curThread
+operator|.
+name|setContextClassLoader
+argument_list|(
+name|loader
+argument_list|)
+expr_stmt|;
 block|}
 comment|/**    * Execute a query plan using Hadoop    */
 specifier|public
@@ -2291,6 +2469,96 @@ name|planFileName
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+comment|// workaround for hadoop-17 - libjars are not added to classpath. this affects local
+comment|// mode execution
+name|boolean
+name|localMode
+init|=
+name|HiveConf
+operator|.
+name|getVar
+argument_list|(
+name|conf
+argument_list|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HADOOPJT
+argument_list|)
+operator|.
+name|equals
+argument_list|(
+literal|"local"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|localMode
+condition|)
+block|{
+name|String
+name|auxJars
+init|=
+name|HiveConf
+operator|.
+name|getVar
+argument_list|(
+name|conf
+argument_list|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVEAUXJARS
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|StringUtils
+operator|.
+name|isNotBlank
+argument_list|(
+name|auxJars
+argument_list|)
+condition|)
+block|{
+try|try
+block|{
+name|addToClassPath
+argument_list|(
+name|StringUtils
+operator|.
+name|split
+argument_list|(
+name|auxJars
+argument_list|,
+literal|","
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|HiveException
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+block|}
 block|}
 name|mapredWork
 name|plan
