@@ -3068,9 +3068,6 @@ argument_list|(
 name|this
 operator|.
 name|ex
-operator|.
-name|toString
-argument_list|()
 argument_list|)
 expr_stmt|;
 name|sb
@@ -4101,9 +4098,6 @@ argument_list|(
 name|this
 operator|.
 name|ex
-operator|.
-name|toString
-argument_list|()
 argument_list|)
 expr_stmt|;
 name|sb
@@ -5609,9 +5603,6 @@ argument_list|(
 name|this
 operator|.
 name|ex
-operator|.
-name|toString
-argument_list|()
 argument_list|)
 expr_stmt|;
 name|sb
@@ -6858,9 +6849,6 @@ argument_list|(
 name|this
 operator|.
 name|ex
-operator|.
-name|toString
-argument_list|()
 argument_list|)
 expr_stmt|;
 name|sb
@@ -7891,9 +7879,6 @@ argument_list|(
 name|this
 operator|.
 name|ex
-operator|.
-name|toString
-argument_list|()
 argument_list|)
 expr_stmt|;
 name|sb
